# vectornav

./: CMakeLists.txt  default.nix  flake.nix
include/: VectorNavComms.hpp
libs/vn_driver_lib/: default.nix  flake.nix  index.html  python.nix
libs/vn_driver_lib/cpp/: CMakeLists.txt
libs/vn_driver_lib/cpp/cmake/: libvncxxConfig.cmake.in
libs/vn_driver_lib/python/vnpy/: conv.py
src/: VectorNavComms.cpp  main.cpp
